# ai-builder

./: .env.example  README.md  pyproject.toml
src/: cli.py  models.py  primitives.py  settings.py
src/agents/: pipeline.py  router.py
src/corpus/: loader.py
src/evaluation/: evaluator.py
src/observability/: telemetry.py
src/perception/: health_monitor.py  pr_drafter.py  staging_pipeline.py
tests/unit/: test_core.py  test_perception.py  test_primitives.py
