[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-builder"
version = "0.2.0"
description = "Agentic RAG system with MongoDB Atlas, OpenRouter, Voyage AI, RAGAS evaluation, and OpenTelemetry observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-voyageai>=0.1.0",

    # MongoDB
    "pymongo>=4.7.0",

    # HTTP + scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",

    # Data models
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Evaluation
    "ragas>=0.1.0",
    "datasets>=2.20.0",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
ai-builder = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live MongoDB and API keys",
    "unit: fast, no external dependencies",
]
